<?xml version="1.0"?>

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

<name>localization</name> <version>0.1.0</version>

  <description>
    Localization package for MIRTE master Spatial AI project.
  </description>

  <maintainer email="rpobrien@tudelft.nl">
    Rory O'Brien
  </maintainer>

<license>MIT</license>

  <!-- Core ROS2 Python -->

<exec_depend>rclpy</exec_depend>

  <!-- Common message types -->

<exec_depend>sensor_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>nav_msgs</exec_depend>

  <!-- TF transforms -->

<exec_depend>tf2_ros</exec_depend>

  <!-- Launch files -->

<exec_depend>launch</exec_depend>
<exec_depend>launch_ros</exec_depend>

  <!-- Mapping / Localization -->

<exec_depend>slam_toolbox</exec_depend>

  <!-- Testing -->

<test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>

